[package]
name = "word_games"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
chrono = "0.4.38"
lazy_static = "1.5.0"
palette = "0.7.6"
rand = "0.8.5"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["blocking"] }
rusqlite = "0.31.0"
schemars = "0.8.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
uuid = {version = "1.8.0", features=["v4", "fast-rng"]}

[dev-dependencies]
tokio = {version = "1.39.3", features=["macros"]}
